# ANA

./: .gitignore  CMakeLists.txt  README.md
Debug/: main.cpp.o.d
_build/: CMakeLists.txt
as/: all.sh  deb_compile.sh
chemfiles/install/include/chemfiles/: config.hpp  exports.hpp
chemfiles/install/lib/cmake/chemfiles/: chemfiles-targets-release.cmake
include/: ANAincludes.hpp  ANAndd.hpp  ANAread.hpp  ANAwrite.hpp
include/ANA/: ANAincludes.hpp  ANAmd.hpp  ANAndd.hpp  ANAread.hpp  ANAstatic.hpp  ANAutils.hpp  ANAwrite.hpp  CGALUtils.hpp  Cavity.hpp  ConvexHull.hpp  ConvexHullFunctions.hpp  IncludedArea.hpp  Includes.hpp  MD.hpp  Modes.hpp  Molecule.hpp  NDD.hpp  NDDUtils.hpp  Options.hpp  PDB.hpp  Primitives.hpp  ProgramOptions.hpp  Read.hpp  Static.hpp  Utils.hpp  Write.hpp
paper/: as.md  references.bib  sa.md
scripts/: ndd.jl
src/: ANAPO.cpp  ANAPO.hpp  ANAincludes.hpp  ANAmd.cpp  ANAmd.hpp  ANAndd.cpp  ANAndd.hpp  ANAread.cpp  ANAread.hpp  ANAstatic.cpp  ANAstatic.hpp  ANAutils.cpp  ANAutils.hpp  ANAwrite.cpp  ANAwrite.hpp  CGALUtils.cpp  Cavity.cpp  ConvexHull.cpp  ConvexHullFunctions.cpp  IncludedArea.cpp  MD.cpp  Makefile  Molecule.cpp  NDD.cpp  NDDUtils.cpp  PDB.cpp  Primitives.cpp  ProgramOptions.cpp  Read.cpp  Static.cpp  Utils.cpp  Write.cpp  compile_all_deb.sh  mac_compile.sh  main.cpp
